--- a/index.html
+++ b/index.html
@@ -1,67 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kinya Drive Cash - Coming Soon</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Kinya Drive Cash – Smart cash & expense tracker for drivers, boda bodas, matatus, and transport businesses in Kenya."/>
+    <title>Kinya Drive Cash | Cash Management for Kenyan Drivers</title>
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            text-align: center;
+            box-sizing: border-box;
         }
-        .container {
-            max-width: 800px;
-            padding: 20px;
-            background: white;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #007bff;
-        }
-        p {
-            font-size: 1.2em;
-        }
-        .cta {
-            margin-top: 20px;
-        }
-        .cta a {
-            background-color: #28a745;
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #0f5132, #198754);
             color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 900px;
+            text-align: center;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            padding: 50px 30px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
+        h1 {
+            font-size: 3.5rem;
+            margin-bottom: 20px;
+            font-weight: 700;
+        }
+
+        .tagline {
+            font-size: 1.4rem;
+            margin-bottom: 30px;
+            opacity: 0.95;
+        }
+
+        .features {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin: 40px 0;
+        }
+
+        .feature-card {
+            background: rgba(255, 255, 255, 0.15);
+            padding: 20px;
+            border-radius: 12px;
+            width: 220px;
+            backdrop-filter: blur(5px);
+        }
+
+        .feature-card h3 {
+            margin-bottom: 10px;
+            font-size: 1.3rem;
+        }
+
+        .coming-soon {
+            font-size: 2rem;
+            margin: 40px 0;
+            font-weight: 600;
+            color: #ffd700;
+        }
+
+        .btn {
+            display: inline-block;
+            background: #ffd700;
+            color: #0f5132;
             font-weight: bold;
+            padding: 15px 40px;
+            border-radius: 50px;
+            text-decoration: none;
+            font-size: 1.2rem;
+            margin: 20px 10px;
+            transition: all 0.3s ease;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
-        .cta a:hover {
-            background-color: #218838;
+
+        .btn:hover {
+            background: white;
+            transform: translateY(-5px);
+            box-shadow: 0 10px 25px rgba(0,0,0,0.3);
         }
+
+        .live-btn {
+            background: white;
+            color: #198754;
+        }
+
         footer {
-            margin-top: 40px;
-            font-size: 0.8em;
-            color: #777;
+            margin-top: 60px;
+            font-size: 0.9rem;
+            opacity: 0.8;
+        }
+
+        @media (max-width: 768px) {
+            h1 { font-size: 2.5rem; }
+            .tagline { font-size: 1.2rem; }
+            .features { flex-direction: column; align-items: center; }
+            .feature-card { width: 90%; }
         }
     </style>
 </head>
 <body>
+
     <div class="container">
-        <h1>Welcome to Kinya Drive Cash</h1>
-        <p>Your go-to app for managing drive-related cash flows in Kenya. Track earnings, expenses, and more with ease!</p>
-        <p><strong>Coming Soon!</strong> We're building an AI-powered platform to help drivers and businesses handle finances on the go. Built with Lovable.app for rapid prototyping.</p>
-        <div class="cta">
-            <a href="https://kinya-drive-cash.lovable.app">Visit the Live Site</a>
+        <h1>Kinya Drive Cash</h1>
+        <p class="tagline">Smart Cash & Expense Tracker for Kenyan Drivers, Boda Bodas, Matatus & Transport Saccos</p>
+
+        <div class="features">
+            <div class="feature-card">
+                <h3>Daily Earnings</h3>
+                <p>Track money collected per trip instantly</p>
+            </div>
+            <div class="feature-card">
+                <h3>Fuel & Expenses</h3>
+                <p>Log fuel, repairs, and maintenance costs</p>
+            </div>
+            <div class="feature-card">
+                <h3>AI Reports</h3>
+                <p>Get weekly/monthly profit insights</p>
+            </div>
         </div>
+
+        <div class="coming-soon">Launching Very Soon!</div>
+
+        <a href="https://kinya-drive-cash.lovable.app" class="btn live-btn">View Live Demo</a>
+        <a href="mailto:hello@kinyadrivecash.com" class="btn">Get Early Access</a>
+
         <footer>
-            &copy; 2025 Kinya Drive Cash. All rights reserved.
+            &copy; 2025 Kinya Drive Cash • Made with ❤️ in Kenya • Powered by Lovable.app
         </footer>
     </div>
+
 </body>
 </html>
